Social Media Icons added

--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <!-- Custom JS-->
     <script src="script.js"></script>
-    <!-- FA -->
-    <script src="https://use.fontawesome.com/4dddba3742.js"></script>
 </head>
 
 <body>
@@ -312,8 +310,19 @@
             <p class="big-font">0744 222 333</p>
             <p class="contact-small-name">JHON DOE</p>
             <p class="contact-subtitle">SOCIAL MEDIA:</p>
-
-
+            <div class="social-icons">
+                <ul>
+                <li>
+                    <a target="_blank" title="Facebook page" href="http://www.facebook.com/PLACEHOLDER"><img alt="Facebook page" src="//login.create.net/images/icons/user/facebook_30x30.png" border=0></a>
+                </li>
+                <li>
+                    <a target="_blank" title="Twitter page" href="http://www.twitter.com/PLACEHOLDER"><img alt="Follow me on twitter" src="//login.create.net/images/icons/user/twitter_30x30.png" border=0></a>
+                </li>
+                <li>
+                    <a target="_blank" title="Instagram page" href="http://www.instagram.com/PLACEHOLDER"><img alt="Follow me on instagram" src="https://c866088.ssl.cf3.rackcdn.com/assets/instagram30x30.png" border=0></a>
+                </li>
+            </ul>
+            </div>
         </adress>
     </footer>
 
