--- a/index.html
+++ b/index.html
@@ -268,6 +268,7 @@
 
     <section id="experienceID" class="experience">
         <h1 class="page-title">EXPERIENCE</h1>
+
         <div>
             <h2 class="sub-title">-EDUCATION-</h2>
             <ul>
@@ -276,13 +277,87 @@
                 <li>2011-Present</li>
             </ul>
         </div>
+
+
+
+
         <div>
+
             <h2 class="sub-title">-WORK-</h2>
-            <ul>
-                <li>Adobe</li>
-                <li>Microsoft</li>
-                <li>Endava</li>
-            </ul>
+
+            <!-- WORK Container-->
+            <div class="container">
+
+                <!-- SVG horizontal line full width -->
+                <span class="svg-size-pos">
+                    <svg class="svg">
+                        <line x1="0" y1="0" x2= "100%" y2= "0"/>
+                    </svg>
+                </span>
+                <!-- /SVG horizontal line full width -->
+
+                <!-- List of companies-->
+                <ul>
+                    <!-- Company 1-->
+                    <li>
+                        <div class="content-container">
+
+                            <img src="Img/adobe_logo.png" alt="Adobe Logo" height="64" width="64">
+
+                            <div class="second-container">
+                                <span class="svg-circle-float">
+                                    <svg class="work-svg-circle">
+                                        <circle cx="10"/>
+                                    </svg>
+                                </span>
+                                <p class="big">Adobe</p>
+                                <p class="small">Feb 2011 - Jun 2012</p>
+                            </div>
+                        </div>
+                    </li>
+                    <!-- /Company 1-->
+
+                    <!-- Company 2-->
+                    <li>
+                        <div class="content-container">
+
+                            <img src="Img/microsoft_logo.png" alt="Microsoft Logo" height="64" width="64">
+
+                            <div class="second-container">
+                                <span class="svg-circle-float">
+                                    <svg class="work-svg-circle">
+                                        <circle cx="10"/>
+                                    </svg>
+                                </span>
+                                <p class="big">Adobe</p>
+                                <p class="small">Feb 2011 - Jun 2012</p>
+                            </div>
+                        </div>
+                    </li>
+                    <!-- /Company 2-->
+
+                    <!-- Company 3-->
+                    <li>
+                        <div class="content-container">
+
+                            <img src="Img/endava-logo.png" alt="Endava Logo">
+
+                            <div class="second-container">
+                                <span class="svg-circle-float">
+                                    <svg class="work-svg-circle">
+                                        <circle cx="10"/>
+                                    </svg>
+                                </span>
+                                <p class="big">Adobe</p>
+                                <p class="small">Feb 2011 - Jun 2012</p>
+                            </div>
+                        </div>
+                    </li>
+                    <!-- /Company 3-->
+                </ul>
+                <!-- /List of companies-->
+            </div>
+            <!-- /WORK Container-->
         </div>
     </section>
 
@@ -313,13 +388,13 @@
             <div class="social-icons">
                 <ul>
                     <li>
-                        <a target="_blank" title="Facebook page" href="http://www.facebook.com/PLACEHOLDER"><img alt="Facebook page" src="//login.create.net/images/icons/user/facebook_30x30.png" border=0></a>
+                        <a target="_blank" title="Facebook" href="http://www.facebook.com/PLACEHOLDER"><img alt="Facebook page" src="Img/facebook-logo.png" border=0></a>
                     </li>
                     <li>
-                        <a target="_blank" title="Twitter page" href="http://www.twitter.com/PLACEHOLDER"><img alt="Follow me on twitter" src="//login.create.net/images/icons/user/twitter_30x30.png" border=0></a>
+                        <a target="_blank" title="Twitter" href="http://www.twitter.com/PLACEHOLDER"><img alt="Follow me on twitter" src="Img/twitter-logo.png" border=0></a>
                     </li>
                     <li>
-                        <a target="_blank" title="Instagram page" href="http://www.instagram.com/PLACEHOLDER"><img alt="Follow me on instagram" src="https://c866088.ssl.cf3.rackcdn.com/assets/instagram30x30.png" border=0></a>
+                        <a target="_blank" title="Instagram" href="http://www.instagram.com/PLACEHOLDER"><img alt="Follow me on instagram" src="Img/instagram-logo.png" border=0></a>
                     </li>
                 </ul>
             </div>
