--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <title>Resume</title>
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <!-- Custom JS-->
     <script src="script.js"></script>
 </head>
@@ -267,21 +265,103 @@
     </section>
 
     <section id="experienceID" class="experience">
+
         <h1 class="page-title">EXPERIENCE</h1>
 
-        <div>
+        <div class="exp-container">
             <h2 class="sub-title">-EDUCATION-</h2>
-            <ul>
-                <li>SSC-2009</li>
-                <li>HSC-2011</li>
-                <li>2011-Present</li>
-            </ul>
+
+            <!-- Experience Container-->
+            <div class="container">
+
+                <!-- SVG horizontal line full width -->
+                <span class="svg-size-pos">
+                    
+                    <svg class="svg">
+                        <line x1="0" y1="0" x2= "100%" y2= "0"/>
+                    </svg>
+                </span>
+                <span class="svg-circle-float side-circle left-circle">
+                    <svg class="work-svg-circle">
+                        <circle cx="10"/>
+                    </svg>
+                </span>
+                <span class="svg-circle-float side-circle right-circle">
+                    <svg class="work-svg-circle">
+                        <circle cx="10"/>
+                    </svg>
+                </span>
+                <!-- /SVG horizontal line full width -->
+
+                <!-- List of faculties-->
+                <ul>
+                    <!-- Faculty 1-->
+                    <li>
+                        <div class="content-container">
+
+                            <img src="Img/faculty1.png" alt="Faculty 1 Logo">
+
+                            <div class="second-container">
+                                <span class="svg-circle-float">
+                                    <svg class="work-svg-circle">
+                                        <circle cx="10"/>
+                                    </svg>
+                                </span>
+                                <p class="big">Adobe</p>
+                                <p class="small">Feb 2011 - Jun 2012</p>
+                            </div>
+                        </div>
+                    </li>
+                    <!-- /Faculty 1-->
+
+                    <!-- Faculty 2-->
+                    <li>
+                        <div class="content-container">
+
+                            <img src="Img/faculty2.png" alt="Faculty 2 Logo">
+
+                            <div class="second-container">
+                                <span class="svg-circle-float">
+                                    <svg class="work-svg-circle">
+                                        <circle cx="10"/>
+                                    </svg>
+                                </span>
+                                <p class="big">Adobe</p>
+                                <p class="small">Feb 2011 - Jun 2012</p>
+                            </div>
+                        </div>
+                    </li>
+                    <!-- /Faculty 2-->
+
+                    <!-- Faculty 3-->
+                    <li>
+                        <div class="content-container">
+
+                            <img src="Img/faculty3.png" alt="Faculty 3 Logo">
+
+                            <div class="second-container">
+                                <span class="svg-circle-float">
+                                    <svg class="work-svg-circle">
+                                        <circle cx="10"/>
+                                    </svg>
+                                </span>
+                                <p class="big">Adobe</p>
+                                <p class="small">Feb 2011 - Jun 2012</p>
+                            </div>
+                        </div>
+                    </li>
+                    <!-- /Faculty 3-->
+                </ul>
+                <!-- /List of faculties-->
+            </div>
+            <!-- /Experience Container-->
+
         </div>
 
 
 
 
-        <div>
+        <div class="work-container">
 
             <h2 class="sub-title">-WORK-</h2>
 
@@ -290,8 +370,19 @@
 
                 <!-- SVG horizontal line full width -->
                 <span class="svg-size-pos">
+                    
                     <svg class="svg">
                         <line x1="0" y1="0" x2= "100%" y2= "0"/>
+                    </svg>
+                </span>
+                <span class="svg-circle-float side-circle left-circle">
+                    <svg class="work-svg-circle">
+                        <circle cx="10"/>
+                    </svg>
+                </span>
+                <span class="svg-circle-float side-circle right-circle">
+                    <svg class="work-svg-circle">
+                        <circle cx="10"/>
                     </svg>
                 </span>
                 <!-- /SVG horizontal line full width -->
@@ -321,7 +412,7 @@
                     <li>
                         <div class="content-container">
 
-                            <img src="Img/microsoft_logo.png" alt="Microsoft Logo" height="64" width="64">
+                            <img src="Img/microsoft_logo.png" alt="Microsoft Logo" height="90" width="90">
 
                             <div class="second-container">
                                 <span class="svg-circle-float">
@@ -340,7 +431,7 @@
                     <li>
                         <div class="content-container">
 
-                            <img src="Img/endava-logo.png" alt="Endava Logo">
+                            <img src="Img/endava-logo2.png" alt="Endava Logo">
 
                             <div class="second-container">
                                 <span class="svg-circle-float">
@@ -400,15 +491,6 @@
             </div>
         </adress>
     </footer>
-
-
-
-
-
-
-
-
-
 
     <!--    SCRIPTS  HERE    -->
 
