Experience section updated

--- a/index.html
+++ b/index.html
@@ -281,12 +281,12 @@
                         <line x1="0" y1="0" x2= "100%" y2= "0"/>
                     </svg>
                 </span>
-                <span class="svg-circle-float side-circle left-circle">
+                <span class="work-svg-circle-float side-circle left-circle">
                     <svg class="work-svg-circle">
                         <circle cx="10"/>
                     </svg>
                 </span>
-                <span class="svg-circle-float side-circle right-circle">
+                <span class="work-svg-circle-float side-circle right-circle">
                     <svg class="work-svg-circle">
                         <circle cx="10"/>
                     </svg>
@@ -302,7 +302,7 @@
                             <img src="Img/faculty1.png" alt="Faculty 1 Logo">
 
                             <div class="second-container">
-                                <span class="svg-circle-float">
+                                <span class="work-svg-circle-float">
                                     <svg class="work-svg-circle">
                                         <circle cx="10"/>
                                     </svg>
@@ -321,7 +321,7 @@
                             <img src="Img/faculty2.png" alt="Faculty 2 Logo">
 
                             <div class="second-container">
-                                <span class="svg-circle-float">
+                                <span class="work-svg-circle-float">
                                     <svg class="work-svg-circle">
                                         <circle cx="10"/>
                                     </svg>
@@ -340,7 +340,7 @@
                             <img src="Img/faculty3.png" alt="Faculty 3 Logo">
 
                             <div class="second-container">
-                                <span class="svg-circle-float">
+                                <span class="work-svg-circle-float">
                                     <svg class="work-svg-circle">
                                         <circle cx="10"/>
                                     </svg>
@@ -375,12 +375,12 @@
                         <line x1="0" y1="0" x2= "100%" y2= "0"/>
                     </svg>
                 </span>
-                <span class="svg-circle-float side-circle left-circle">
+                <span class="work-svg-circle-float side-circle left-circle">
                     <svg class="work-svg-circle">
                         <circle cx="10"/>
                     </svg>
                 </span>
-                <span class="svg-circle-float side-circle right-circle">
+                <span class="work-svg-circle-float side-circle right-circle">
                     <svg class="work-svg-circle">
                         <circle cx="10"/>
                     </svg>
@@ -396,7 +396,7 @@
                             <img src="Img/adobe_logo.png" alt="Adobe Logo" height="64" width="64">
 
                             <div class="second-container">
-                                <span class="svg-circle-float">
+                                <span class="work-svg-circle-float">
                                     <svg class="work-svg-circle">
                                         <circle cx="10"/>
                                     </svg>
@@ -415,7 +415,7 @@
                             <img src="Img/microsoft_logo.png" alt="Microsoft Logo" height="90" width="90">
 
                             <div class="second-container">
-                                <span class="svg-circle-float">
+                                <span class="work-svg-circle-float">
                                     <svg class="work-svg-circle">
                                         <circle cx="10"/>
                                     </svg>
@@ -434,7 +434,7 @@
                             <img src="Img/endava-logo2.png" alt="Endava Logo">
 
                             <div class="second-container">
-                                <span class="svg-circle-float">
+                                <span class="work-svg-circle-float">
                                     <svg class="work-svg-circle">
                                         <circle cx="10"/>
                                     </svg>
