SVG rework for IE and Moz

--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <title>Resume</title>
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
-    <!-- Custom JS-->
-    <script src="script.js"></script>
 </head>
 
 <body>
@@ -95,41 +93,42 @@
             <section class="skill1">
                 <h2><span class="skills-title-span"></span>Proficiency skills</h2>
                 <ul>
-                    <li>Photoshop
+                    <li>
+                        <span class="skill-name">Photoshop</span>
                         <span class="skill-level">Level 5</span>
                         <span class="svg-bullets-float">
                             <svg class="svg-circle svg-skill-lvl5">
-                      <circle cx="10"/>
-                      <circle cx="30"/>
-                      <circle cx="50"/>
-                      <circle cx="70"/>
-                      <circle cx="90"/>
+                      <circle cx="10px" cy="10px" r="6px" stroke-width="2px" fill="rgb(255, 255, 255)" stroke="rgb(219, 70, 30)"/>
+                      <circle cx="30" cy="10px" r="6px" stroke-width="2px" fill="rgb(255, 255, 255)" stroke="rgb(219, 70, 30)"/>
+                      <circle cx="50" cy="10px" r="6px" stroke-width="2px" fill="rgb(255, 255, 255)" stroke="rgb(219, 70, 30)"/>
+                      <circle cx="70" cy="10px" r="6px" stroke-width="2px" fill="rgb(255, 255, 255)" stroke="rgb(219, 70, 30)"/>
+                      <circle cx="90" cy="10px" r="6px" stroke-width="2px" fill="rgb(255, 255, 255)" stroke="rgb(219, 70, 30)"/>
                             </svg>
                         </span>
                     </li>
                     <li>
-                        JS
+                        <span class="skill-name">JS</span>
                         <span class="skill-level">Level 4</span>
                         <span class="svg-bullets-float">
                             <svg class="svg-circle svg-skill-lvl4">
-                      <circle cx="10"/>
-                      <circle cx="30"/>
-                      <circle cx="50"/>
-                      <circle cx="70"/>
-                      <circle cx="90"/>
+                      <circle cx="10px" cy="10px" r="6px" stroke-width="2px" fill="rgb(255, 255, 255)" stroke="rgb(219, 70, 30)"/>
+                      <circle cx="30" cy="10px" r="6px" stroke-width="2px" fill="rgb(255, 255, 255)" stroke="rgb(219, 70, 30)"/>
+                      <circle cx="50" cy="10px" r="6px" stroke-width="2px" fill="rgb(255, 255, 255)" stroke="rgb(219, 70, 30)"/>
+                      <circle cx="70" cy="10px" r="6px" stroke-width="2px" fill="rgb(255, 255, 255)" stroke="rgb(219, 70, 30)"/>
+                      <circle cx="90" cy="10px" r="6px" stroke-width="2px" fill="rgb(255, 255, 255)" stroke="rgb(219, 70, 30)"/>
                             </svg>
                         </span>
                     </li>
                     <li>
-                        Java
+                        <span class="skill-name">Java</span>
                         <span class="skill-level">Level 3</span>
                         <span class="svg-bullets-float">
                             <svg class="svg-circle svg-skill-lvl3">
-                      <circle cx="10"/>
-                      <circle cx="30"/>
-                      <circle cx="50"/>
-                      <circle cx="70"/>
-                      <circle cx="90"/>
+                      <circle cx="10px" cy="10px" r="6px" stroke-width="2px" fill="rgb(255, 255, 255)" stroke="rgb(219, 70, 30)"/>
+                      <circle cx="30" cy="10px" r="6px" stroke-width="2px" fill="rgb(255, 255, 255)" stroke="rgb(219, 70, 30)"/>
+                      <circle cx="50" cy="10px" r="6px" stroke-width="2px" fill="rgb(255, 255, 255)" stroke="rgb(219, 70, 30)"/>
+                      <circle cx="70" cy="10px" r="6px" stroke-width="2px" fill="rgb(255, 255, 255)" stroke="rgb(219, 70, 30)"/>
+                      <circle cx="90" cy="10px" r="6px" stroke-width="2px" fill="rgb(255, 255, 255)" stroke="rgb(219, 70, 30)"/>
                             </svg>
                         </span>
                     </li>
@@ -139,41 +138,41 @@
                 <h2><span class="skills-title-span"></span>Personal skills</h2>
                 <ul>
                     <li>
-                        Creative
+                        <span class="skill-name">Creative</span>
                         <span class="skill-level">Level 5</span>
                         <span class="svg-bullets-float">
                             <svg class="svg-circle svg-skill-lvl5">
-                      <circle cx="10"/>
-                      <circle cx="30"/>
-                      <circle cx="50"/>
-                      <circle cx="70"/>
-                      <circle cx="90"/>
+                      <circle cx="10px" cy="10px" r="6px" stroke-width="2px" fill="rgb(255, 255, 255)" stroke="rgb(219, 70, 30)"/>
+                      <circle cx="30" cy="10px" r="6px" stroke-width="2px" fill="rgb(255, 255, 255)" stroke="rgb(219, 70, 30)"/>
+                      <circle cx="50" cy="10px" r="6px" stroke-width="2px" fill="rgb(255, 255, 255)" stroke="rgb(219, 70, 30)"/>
+                      <circle cx="70" cy="10px" r="6px" stroke-width="2px" fill="rgb(255, 255, 255)" stroke="rgb(219, 70, 30)"/>
+                      <circle cx="90" cy="10px" r="6px" stroke-width="2px" fill="rgb(255, 255, 255)" stroke="rgb(219, 70, 30)"/>
                             </svg>
                         </span>
                     </li>
                     <li>
-                        Leading
+                        <span class="skill-name">Leading</span>
                         <span class="skill-level">Level 4</span>
                         <span class="svg-bullets-float">
                             <svg class="svg-circle svg-skill-lvl4">
-                      <circle cx="10"/>
-                      <circle cx="30"/>
-                      <circle cx="50"/>
-                      <circle cx="70"/>
-                      <circle cx="90"/>
+                      <circle cx="10px" cy="10px" r="6px" stroke-width="2px" fill="rgb(255, 255, 255)" stroke="rgb(219, 70, 30)"/>
+                      <circle cx="30" cy="10px" r="6px" stroke-width="2px" fill="rgb(255, 255, 255)" stroke="rgb(219, 70, 30)"/>
+                      <circle cx="50" cy="10px" r="6px" stroke-width="2px" fill="rgb(255, 255, 255)" stroke="rgb(219, 70, 30)"/>
+                      <circle cx="70" cy="10px" r="6px" stroke-width="2px" fill="rgb(255, 255, 255)" stroke="rgb(219, 70, 30)"/>
+                      <circle cx="90" cy="10px" r="6px" stroke-width="2px" fill="rgb(255, 255, 255)" stroke="rgb(219, 70, 30)"/>
                             </svg>
                         </span>
                     </li>
                     <li>
-                        TeamWork
+                        <span class="skill-name">TeamWork</span>
                         <span class="skill-level">Level 4</span>
                         <span class="svg-bullets-float">
                             <svg class="svg-circle svg-skill-lvl4">
-                      <circle cx="10"/>
-                      <circle cx="30"/>
-                      <circle cx="50"/>
-                      <circle cx="70"/>
-                      <circle cx="90"/>
+                      <circle cx="10px" cy="10px" r="6px" stroke-width="2px" fill="rgb(255, 255, 255)" stroke="rgb(219, 70, 30)"/>
+                      <circle cx="30" cy="10px" r="6px" stroke-width="2px" fill="rgb(255, 255, 255)" stroke="rgb(219, 70, 30)"/>
+                      <circle cx="50" cy="10px" r="6px" stroke-width="2px" fill="rgb(255, 255, 255)" stroke="rgb(219, 70, 30)"/>
+                      <circle cx="70" cy="10px" r="6px" stroke-width="2px" fill="rgb(255, 255, 255)" stroke="rgb(219, 70, 30)"/>
+                      <circle cx="90" cy="10px" r="6px" stroke-width="2px" fill="rgb(255, 255, 255)" stroke="rgb(219, 70, 30)"/>
                             </svg>
                         </span>
                     </li>
@@ -182,39 +181,42 @@
             <section class="skill3">
                 <h2><span class="skills-title-span"></span>Professional skills</h2>
                 <ul>
-                    <li>UI/UX Design
+                    <li>
+                        <span class="skill-name">UI/UX Design</span>
                         <span class="skill-level">Level 4</span>
                         <span class="svg-bullets-float">
                             <svg class="svg-circle svg-skill-lvl4">
-                      <circle cx="10"/>
-                      <circle cx="30"/>
-                      <circle cx="50"/>
-                      <circle cx="70"/>
-                      <circle cx="90"/>
+                      <circle cx="10px" cy="10px" r="6px" stroke-width="2px" fill="rgb(255, 255, 255)" stroke="rgb(219, 70, 30)"/>
+                      <circle cx="30" cy="10px" r="6px" stroke-width="2px" fill="rgb(255, 255, 255)" stroke="rgb(219, 70, 30)"/>
+                      <circle cx="50" cy="10px" r="6px" stroke-width="2px" fill="rgb(255, 255, 255)" stroke="rgb(219, 70, 30)"/>
+                      <circle cx="70" cy="10px" r="6px" stroke-width="2px" fill="rgb(255, 255, 255)" stroke="rgb(219, 70, 30)"/>
+                      <circle cx="90" cy="10px" r="6px" stroke-width="2px" fill="rgb(255, 255, 255)" stroke="rgb(219, 70, 30)"/>
                             </svg>
                         </span>
                     </li>
-                    <li>Graphic Design
+                    <li>
+                        <span class="skill-name">Graphic Design</span>
                         <span class="skill-level">Level 4</span>
                         <span class="svg-bullets-float">
                             <svg class="svg-circle svg-skill-lvl4">
-                      <circle cx="10"/>
-                      <circle cx="30"/>
-                      <circle cx="50"/>
-                      <circle cx="70"/>
-                      <circle cx="90"/>
+                      <circle cx="10px" cy="10px" r="6px" stroke-width="2px" fill="rgb(255, 255, 255)" stroke="rgb(219, 70, 30)"/>
+                      <circle cx="30" cy="10px" r="6px" stroke-width="2px" fill="rgb(255, 255, 255)" stroke="rgb(219, 70, 30)"/>
+                      <circle cx="50" cy="10px" r="6px" stroke-width="2px" fill="rgb(255, 255, 255)" stroke="rgb(219, 70, 30)"/>
+                      <circle cx="70" cy="10px" r="6px" stroke-width="2px" fill="rgb(255, 255, 255)" stroke="rgb(219, 70, 30)"/>
+                      <circle cx="90" cy="10px" r="6px" stroke-width="2px" fill="rgb(255, 255, 255)" stroke="rgb(219, 70, 30)"/>
                             </svg>
                         </span>
                     </li>
-                    <li>Web Design
+                    <li>
+                        <span class="skill-name">Web Design</span>
                         <span class="skill-level">Level 4</span>
                         <span class="svg-bullets-float">
                             <svg class="svg-circle svg-skill-lvl4">
-                      <circle cx="10"/>
-                      <circle cx="30"/>
-                      <circle cx="50"/>
-                      <circle cx="70"/>
-                      <circle cx="90"/>
+                      <circle cx="10px" cy="10px" r="6px" stroke-width="2px" fill="rgb(255, 255, 255)" stroke="rgb(219, 70, 30)"/>
+                      <circle cx="30" cy="10px" r="6px" stroke-width="2px" fill="rgb(255, 255, 255)" stroke="rgb(219, 70, 30)"/>
+                      <circle cx="50" cy="10px" r="6px" stroke-width="2px" fill="rgb(255, 255, 255)" stroke="rgb(219, 70, 30)"/>
+                      <circle cx="70" cy="10px" r="6px" stroke-width="2px" fill="rgb(255, 255, 255)" stroke="rgb(219, 70, 30)"/>
+                      <circle cx="90" cy="10px" r="6px" stroke-width="2px" fill="rgb(255, 255, 255)" stroke="rgb(219, 70, 30)"/>
                             </svg>
                         </span>
                     </li>
@@ -500,7 +502,7 @@
     <!--    SCRIPTS  HERE    -->
 
     <!-- JQuery -->
-    <script src="https://code.jquery.com/jquery-3.1.0.js" integrity="sha256-slogkvB1K3VOkzAI8QITxV3VzpOnkeNVsKvtkYLMjfk=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="Scripts/jquery-3.1.0.js"></script>
     <!-- Waypoints JS -->
     <script type="text/javascript" src="Scripts/jquery.waypoints.js"></script>
     <!-- Custom JS -->
