SVG rework for IE and Moz

--- a/index.html
+++ b/index.html
@@ -279,18 +279,18 @@
                 <!-- SVG horizontal line full width -->
                 <span class="svg-size-pos">
                     
-                    <svg class="svg">
-                        <line x1="0" y1="0" x2= "100%" y2= "0"/>
+                    <svg class="svg-line">
+                        <line x1="0" y1="0" x2= "100%" y2= "0" stroke="#2C3F50" stroke-width="10px"/>
                     </svg>
                 </span>
                 <span class="work-svg-circle-float side-circle left-circle">
                     <svg class="work-svg-circle">
-                        <circle cx="10"/>
+                        <circle cx="10px" cy="10px" r="8px" stroke-width="2px" fill="#2C3F50" stroke="#2C3F50"/>
                     </svg>
                 </span>
                 <span class="work-svg-circle-float side-circle right-circle">
                     <svg class="work-svg-circle">
-                        <circle cx="10"/>
+                        <circle cx="10" cy="10px" r="8px" stroke-width="2px" fill="#2C3F50" stroke="#2C3F50"/>
                     </svg>
                 </span>
                 <!-- /SVG horizontal line full width -->
@@ -306,7 +306,7 @@
                             <div class="second-container">
                                 <span class="work-svg-circle-float">
                                     <svg class="work-svg-circle">
-                                        <circle cx="10"/>
+                                        <circle cx="10" cy="10px" r="8px" stroke-width="3px" fill="white" stroke="#2C3F50"/>
                                     </svg>
                                 </span>
                                 <p class="big">Adobe</p>
@@ -325,7 +325,7 @@
                             <div class="second-container">
                                 <span class="work-svg-circle-float">
                                     <svg class="work-svg-circle">
-                                        <circle cx="10"/>
+                                        <circle cx="10" cy="10px" r="8px" stroke-width="3px" fill="white" stroke="#2C3F50"/>
                                     </svg>
                                 </span>
                                 <p class="big">Adobe</p>
@@ -344,7 +344,7 @@
                             <div class="second-container">
                                 <span class="work-svg-circle-float">
                                     <svg class="work-svg-circle">
-                                        <circle cx="10"/>
+                                        <circle cx="10" cy="10px" r="8px" stroke-width="3px" fill="white" stroke="#2C3F50"/>
                                     </svg>
                                 </span>
                                 <p class="big">Adobe</p>
@@ -373,18 +373,18 @@
                 <!-- SVG horizontal line full width -->
                 <span class="svg-size-pos">
                     
-                    <svg class="svg">
-                        <line x1="0" y1="0" x2= "100%" y2= "0"/>
+                    <svg class="svg-line">
+                        <line x1="0" y1="0" x2="100%" y2="0" stroke="#2C3F50" stroke-width="10px"/>
                     </svg>
                 </span>
                 <span class="work-svg-circle-float side-circle left-circle">
                     <svg class="work-svg-circle">
-                        <circle cx="10"/>
+                        <circle cx="10" cy="10px" r="8px" stroke-width="2px" fill="#2C3F50" stroke="#2C3F50"/>
                     </svg>
                 </span>
                 <span class="work-svg-circle-float side-circle right-circle">
                     <svg class="work-svg-circle">
-                        <circle cx="10"/>
+                        <circle cx="10" cy="10px" r="8px" stroke-width="2px" fill="#2C3F50" stroke="#2C3F50"/>
                     </svg>
                 </span>
                 <!-- /SVG horizontal line full width -->
@@ -400,7 +400,7 @@
                             <div class="second-container">
                                 <span class="work-svg-circle-float">
                                     <svg class="work-svg-circle">
-                                        <circle cx="10"/>
+                                        <circle cx="10" cy="10px" r="8px" stroke-width="3px" fill="white" stroke="#2C3F50"/>
                                     </svg>
                                 </span>
                                 <p class="big">Adobe</p>
@@ -419,7 +419,7 @@
                             <div class="second-container">
                                 <span class="work-svg-circle-float">
                                     <svg class="work-svg-circle">
-                                        <circle cx="10"/>
+                                        <circle cx="10" cy="10px" r="8px" stroke-width="3px" fill="white" stroke="#2C3F50"/>
                                     </svg>
                                 </span>
                                 <p class="big">Adobe</p>
@@ -438,7 +438,7 @@
                             <div class="second-container">
                                 <span class="work-svg-circle-float">
                                     <svg class="work-svg-circle">
-                                        <circle cx="10"/>
+                                        <circle cx="10" cy="10px" r="8px" stroke-width="3px" fill="white" stroke="#2C3F50"/>
                                     </svg>
                                 </span>
                                 <p class="big">Adobe</p>
